--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			header {
 				border-bottom: 1px solid #ccc;
 				padding: 100px 10px;
-				margin:50px;
+				margin: 50px;
 			}
 			#toolbar {
 				padding: 10px;
@@ -24,7 +24,7 @@
 				border-right: 1px solid #ccc;
 			}
 			nav ul {
-				list-style: none;#ccc
+				list-style: none;
 				padding-left: 0;
 				padding-right: 20px;
 			}
